fixed spacing on newsletter section

--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -42,18 +42,19 @@ footer {
 
 
 
-.newsForm form input {
-    height: 3em;
-    padding-top: 1.5em;
-}
-
-.newsForm form textarea {
-    height: 20px;
-}
+// .newsForm form input {
+//     height: 3em;
+//     padding-top: 0.25em;
+//     padding-left: 0.5em;
+//     border: 0.2em $blue solid;
+//     border-radius: 0.5em;
+//     width: 35em;
+// }
 
 .newsForm ::placeholder {
     font-family: $body;
-    font-size: 2em;
+    font-size: 1.5em;
+    padding-top: 1.5em;
     color: $blue;
 }
 
